# cod

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
lib/todoist/: Cargo.toml
lib/todoist/src/: lib.rs  sync_api.rs  todoist.rs  types.rs
src/: app.rs  cli.rs  config.rs  main.rs  parser.rs
src/store/: mod.rs  store.rs  yaml_store.rs
src/synchronizer/: todoist.rs
src/todo/: item.rs  item_presenter.rs  item_source.rs  mod.rs  todo.rs  todo_presenter.rs  todo_serialized.rs
