[package]
name = "cod"
version = "0.1.0"
authors = ["aonemd <aonemdsaleh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
structopt = { version = "0.3.21", default-features = false }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
date_time_parser = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
colored = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

todoist = { path = "./lib/todoist" }
